--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,8 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
+set-window-option -g mode-mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
