--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,7 +48,7 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 
 # 256色端末を使用する
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 #ステータスバーの色を設定する
 set -g status-fg white
