--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# clipboardを使えるようにする
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # prefixキーをC-aに変更する
 set -g prefix C-f
 
@@ -75,7 +72,7 @@ set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
 
-ステータスバーを設定する
+# ステータスバーを設定する
 ## 左パネルを設定する
 set -g status-left-length 40
 set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
