--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ bind -r L resize-pane -R 5
 
 # マウス操作を有効にする
 set-window-option -g mode-mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 setw -g mode-mouse on
 set -g mouse-select-pane on
 set -g mouse-resize-pane on
@@ -74,29 +74,29 @@ set -g message-attr bright
 
 # ステータスバーを設定する
 ## 左パネルを設定する
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
+#set -g status-left-length 40
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
 ## 右パネルを設定する
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
+#set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 ## ステータスバーのUTF-8サポートを有効にする
-set -g status-utf8 on
+#set -g status-utf8 on
 ## リフレッシュの間隔を設定する(デフォルト 15秒)
-set -g status-interval 60
+#set -g status-interval 60
 ## ウィンドウリストの位置を中心寄せにする
-set -g status-justify centre
+#set -g status-justify centre
 ## ヴィジュアルノーティフィケーションを有効にする
-setw -g monitor-activity on
-set -g visual-activity on
+#setw -g monitor-activity on
+#set -g visual-activity on
 ## ステータスバーを上部に表示する
-set -g status-position top
+#set -g status-position top
 
 # コピーモードを設定する
 ## viのキーバインドを使用する
-setw -g mode-keys vi
+#setw -g mode-keys vi
 ## クリップボード共有を有効にする
 # set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
