--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
   c   = checkout
   cb  = checkout -b
   cm  = checkout master
- coa  = commit --ammend
+ coa  = commit --amend
   ms  = merge --squash
   ri  = rebase -i
   rp  = remote prune origin
