tmuxでのコピーモードの設定など

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,26 @@
 # prefixキーをC-aに変更する
 set -g prefix C-f
 
+
+##########
+# コピーモードの調整
+# http://mba-hack.blogspot.jp/2013/10/tmux.html
+
+# コピーモード時のキーバインディング
+set-window-option -g mode-keys vi
+
+# 1行コピー
+bind-key -t vi-copy Y copy-line
+
+# viコピーモードのキーバインド表示
+bind / list-keys -t vi-copy
+
+# Enterでクリップボードに(tmux 1.8~)
+# http://qiita.com/kkabetani/items/e37ac1e4e0b53c418a35
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+##########
+
+
 # キーストロークのディレイを減らす
 set -sg escape-time 1
 
@@ -12,9 +32,6 @@ setw -g pane-base-index 1
 
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# C-a*2でtmux内のプログラムにC-aを送る
-# bind C-a send-prefix
 
 # | でペインを縦に分割する
 bind | split-window -h
