--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind / list-keys -t vi-copy
 
 # Enterでクリップボードに(tmux 1.8~)
 # http://qiita.com/kkabetani/items/e37ac1e4e0b53c418a35
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 ##########
 
 
@@ -33,11 +33,14 @@ setw -g pane-base-index 1
 # 設定ファイルをリロードする
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# 新しいタブを現在のパスで開く
+bind c new-window -c "#{pane_current_path}"
+
 # | でペインを縦に分割する
-bind | split-window -h
+bind | split-window -h -c '#{pane_current_path}'
 
 # - でペインを横に分割する
-bind - split-window -v
+bind - split-window -v -c '#{pane_current_path}'
 
 # Vimのキーバインドでペインを移動する
 bind h select-pane -L
@@ -62,7 +65,7 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 
 # 256色端末を使用する
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 #ステータスバーの色を設定する
 set -g status-fg white
@@ -117,3 +120,4 @@ set -g message-attr bright
 #bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 #unbind -t vi-copy Enter
 #bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+set -g default-command "reattach-to-user-namespace -l /usr/local/bin/zsh"
